maquetacion html simple

--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Ingreso al sistema</title>
 </head>
 <body>
-    
+    <div>
+        <form name="login">
+            <h2>Bienvenido a nuestro sistema</h2>
+            <div>
+                <div>
+                    <h5>Email</h5>
+                    <input type="email" name="" id="email" required>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <h5>Contraseña</h5>
+                    <input type="password" name="" id="password" required>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <input type="checkbox" name="" id="acepto" required>
+                </div>
+            </div>
+            <input type="button" value="ingresar">
+        </form>
+    </div>
 </body>
 </html>
