agregando funcionalidad a los inputs

--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <title>Ingreso al sistema</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
 
-      <div class="content">
+        <div class="content">
 
-        <form name="login">
-          <h2 class="title">Bienvenido a nuestro sistema</h2>
+            <form name="login">
+                <h2>Bienvenido a nuestro sistema</h2>
 
-          <div class="the-input">
-            <div class="date">
-              <h5>Email</h5>
-              <input type="email" name="" class="input" id="email" required />
-            </div>
-          </div>
+                <div class="the-input">
+                    <div class="ico">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div>
+                        <h5>Email</h5>
+                        <input type="email" name="" class="input" id="email" required />
+                    </div>
+                </div>
 
-          <div class="the-input">
-            <div class="date">
-              <h5>Contraseña</h5>
-              <input type="password" name="" class="input" id="password" required />
-            </div>
-          </div>
+                <div class="the-input">
+                    <div class="ico"> 
+                        <i class="fas fa-lock"></i>
+                   </div>
+                    <div>
+                        <h5>Contraseña</h5>
+                        <input type="password" name="" class="input" id="password" required />
+                    </div>
+                </div>
 
-          <div>
-            <div>
-              <input type="checkbox" name="" id="acepto" required />
-            </div>
-          </div>
+                <div>
+                    <div>
+                        <label for="acepto"></label>
+                        <input type="checkbox" name="" id="acepto" required />
+                    </div>
+                </div>
 
-          <input type="button" value="ingresar" class="btn" />
-        </form>
+                <input type="button" value="ingresar" class="btn" />
+            </form>
 
-      </div>
+        </div>
 
     </div>
-  </body>
+    <script type="text/javascript" src="assets/js/main.js"></script>
+</body>
+
 </html>
